--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -14,8 +14,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: d-i\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-07-10 15:53+0530\n"
 "Last-Translator: Kartik Mistry <kartik.mistry@gmail.com>\n"
 "Language-Team: Gujarati <team@utkarsh.org>\n"
@@ -48,12 +48,29 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr "બીજી રીતે, તમે જાતે કર્નલને ફર્મવેર પુછે ત્યારે, દાખલ કરીને બૂટ કરી શકો છો :"
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "આપમેળે બૂટ માટે ફર્મવેર ચલો ગોઠવો"
@@ -72,6 +89,18 @@ msgstr ""
 "ફર્મવેરમાં ગોઠવવા પડશે. સ્થાપનનાં અંત પછી, સિસ્ટમ ફરી શરુ થશે અને ફર્મવેર આપમેળે શરૂ થવાનો "
 "પ્રયત્ન કરશે. તમે આ ક્રિયા ગમે તે કળ દબાવીને બંધ કરી શકો છો. તમે પછી NeTTrom આદેશ સિસ્ટમ "
 "પર આવી જશે જ્યાં તમારે નીચેનાં આદેશો ચલાવવા પડશે:"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
