--- a/debian/po/hi.po
+++ b/debian/po/hi.po
@@ -17,8 +17,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: hi\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-06 02:35+0530\n"
 "Last-Translator: Nishant Sharma <me at nishants.net>\n"
 "Language-Team: Hindi\n"
@@ -52,12 +52,29 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr "वैकल्पिक रूप से, आप फर्मवेयर प्रॉम्पट पर लिख कर कर्नेल हस्तचालित बूट कर सकते हैं।"
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "स्वचालित बूट के लिए फर्मवेयर प्राचल नियत कर रहे हैं"
@@ -76,6 +93,18 @@ msgstr ""
 "है. इस संस्थापन चरण के अंत में आपका तंत्र रीबूट होगा और फर्मवेयर स्वतः बूट का प्रयास करेगा। "
 "आप कोई भी कुंजी दबा कर उसे रोक सकते है। उसके बाद आपको नेटटीरॉम कमांड तंत्र में छोड़ दिया "
 "जाएगा जहाँ आपको निम्नलिखित कमांड चलाने होंगेः"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
