--- a/debian/po/km.po
+++ b/debian/po/km.po
@@ -15,8 +15,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: km\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-04 09:11+0700\n"
 "Last-Translator: Khoem Sokhem <khoemsokhem@khmeros.info>\n"
 "Language-Team:  <en@li.org>\n"
@@ -49,12 +49,29 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr "ជា​ជម្រើស អ្នក​នឹង​អាច​ចាប់ផ្ដើម​ខឺណែល​ដោយ​ដៃ ដោយ​បញ្ចូល នៅ​ប្រអប់​បញ្ចូល​កម្មវិធី​បង្កប់ ។t:"
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "កំណត់អថរ​ firmware សម្រាប់​ការ​ចាប់ផ្ដើម​ស្វ័យប្រវត្តិ"
@@ -73,6 +90,18 @@ msgstr ""
 "ចាប់ផ្ដើម​លីនុច​ដោយ​ស្វ័យប្រវត្តិ ។ នៅ​ចុង​បញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​នឹង​ចាប់ផ្ដើម​ឡើង​វិញ ហើយ​កម្មវិធី​បង្កប់​នឹង​"
 "ប៉ុនប៉ង​ចាប់ផ្ដើម​ការ​ចាប់ផ្ដើម​ស្វ័យប្រវត្តិ ។ អ្នក​អាច​បញ្ឈប់​វា ដោយ​ចុច​គ្រាប់ចុច​ណា​មួយ ។ បន្ទាប់​មក​ប្រព័ន្ធ​នឹង​"
 "ដាក់​អ្នក​នៅ​ក្នុង​ប្រព័ន្ធ​ពាក្យបញ្ជា NeTTrom ដែល​នៅ​ទីនោះ​អ្នក​ត្រូវ​តែ​ប្រតិបត្តិ​ពាក្យបញ្ជា​ខាង​ក្រោម ៖"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
