--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -17,8 +17,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: pa\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-11-25 12:39+0530\n"
 "Last-Translator: A S Alam <apbrar@gmail.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
@@ -52,12 +52,29 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr "ਬਦਲਵੇਂ ਰੂਪ ਵਿੱਚ ਤੁਸੀਂ ਫਾਇਰਵਾਇਰ ਪਰਾਊਟ ਉੱਤੇ ਕਰਨਲ ਨੂੰ ਹੇਠ ਦਿੱਤੇ ਮੁੱਲ ਦੇ ਕੇ ਬੂਟ ਕਰ ਸਕਦੇ ਹੋ:"
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "ਸਵੈ ਬੂਟ ਕਰਨ ਲਈ firmware ਵੇਰੀਬਲ ਨਿਰਧਾਰਿਤ ਕਰ ਰਿਹਾ ਹੈ"
@@ -76,6 +93,18 @@ msgstr ""
 "ਨਿਰਧਾਰਿਤ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਇਸ ਇੰਸਟਾਲੇਸ਼ਨ ਦੇ ਅੰਤ ਵਿੱਚ, ਸਿਸਟਮ ਮੁੜ ਚੱਲੇਗਾ, ਅਤੇ firmware ਸਵੈ-ਬੂਟ "
 "ਕਰੇਗਾ। ਤੁਸੀਂ ਕੋਈ ਸਵਿੱਚ ਦਬਾ ਕੇ ਇਸ ਨੂੰ ਅਧੂਰਾ ਖਤਮ ਕਰ ਸਕਦੇ ਹੋ। ਤੁਸੀਂ ਫਿਰ NeTTrom ਕਮਾਂਡ ਸਿਸਟਮ "
 "ਵਿੱਚ ਜਾਓਗੇ ਜਿੱਥੇ ਤੁਸੀਂ ਹੇਠਲੀਆਂ ਕਮਾਂਡਾਂ ਚਲਾਉਣੀਆਂ ਹਨ:"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
