--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -12,8 +12,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bs\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-31 02:55+0100\n"
 "Last-Translator: Safir Secerovic <sapphire@linux.org.ba>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
@@ -46,6 +46,16 @@ msgstr ""
 "podići.  Na firmware promptu, postavite sljedeće firmware varijable kako bi "
 "omogućili automatsko podizanje:"
 
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
 #  Type: note
 #  Description
 #. Type: note
@@ -58,6 +68,13 @@ msgstr "Alternativno, možete podići kernel ručno, unoseći na firmware prompt
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "Postavljam varijable firmwarea za automatsko podizanje"
@@ -77,6 +94,18 @@ msgstr ""
 "se ponovo podići i firmware će pokušati automatsko podizanje.  Možete "
 "prekinuti ovo pritiskanjem bilo koje tipke. Tada ćete biti prebačeni u "
 "NeTTrom komandni sistem gdje trebate ukucati sljedeće naredbe:"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
