--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -12,8 +12,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dz\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-06 10:45+0530\n"
 "Last-Translator: Jurmey Rabgay <jur_gay@yahoo.com>\n"
 "Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
@@ -50,6 +50,16 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
@@ -58,6 +68,13 @@ msgstr ""
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་གཞི་སྒྲིག་འབད་དོ།"
@@ -77,6 +94,18 @@ msgstr ""
 "ལོག་བུཊི་འབད་ནི་དང་ ཚོང་ལས་ཁང་གི་ཅ་ཆས་འདི་གིས་རང་བཞིན་བུཊི་འབད་ནི་ལུ་དཔའ་བཅམ་འོང་། འ་ནི་འདི་"
 "ཁྱོད་ཀྱིས་ལྡེ་མིག་བུ་གང་རུང་ཨེབ་པའི་ཐོག་ལས་བར་བཤལ་འབད་ཚུགས། དེ་ལས་ཁྱོད་ནེཊི་ཊི་རོམ་བརྡ་བཀོད་རིམ་ལུགས་"
 "ནང་ལུ་བཞག་ནི་དང་ཁྱོད་ཀྱིས་འོག་གི་བརྡ་བཀོད་ཚུ་ལག་ལེན་འཐབ་དགོ།"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
