--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -18,8 +18,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-21 13:35+0700\n"
 "Last-Translator: Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>\n"
 "Language-Team: Debian Indonesia Team <debian-l10n-id@gurame.fisika.ui.ac."
@@ -55,6 +55,16 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
@@ -63,6 +73,13 @@ msgstr ""
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "Menata variabel firmware untuk boot otomatis"
@@ -83,6 +100,18 @@ msgstr ""
 "otomatis. Anda dapat membatalkannya dengan menekan sembarang tombol. Anda "
 "kemudian akan masuk ke sistem perintah NeTTrom, tempat Anda harus "
 "menjalankan perintah berikut ini:"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
