--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-17 21:41-0400\n"
 "Last-Translator: Sunjae park <darehanl@gmail.com>\n"
 "Language-Team:  Korean <debian-l10n-korean@lists.debian.org>\n"
@@ -44,6 +44,16 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
@@ -52,6 +62,13 @@ msgstr ""
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "자동 부팅을 위한 펌웨어 변수 설정하기"
@@ -70,6 +87,18 @@ msgstr ""
 "정해야 합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. 이 때 펌웨어가"
 "자동 부팅을 시도할텐데, 아무 키를 눌러서 자동부팅을 중단시키십시오. 이 때 "
 "NeTTrom 명령 시스템에서 다음 명령을 실행하십시오:"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
