--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -17,8 +17,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ml\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-12-03 15:43+0530\n"
 "Last-Translator: Praveen A <pravi.a@gmail.com>\n"
 "Language-Team: malayalam <smc-discuss@googlegroups.com>\n"
@@ -51,6 +51,16 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
@@ -59,6 +69,13 @@ msgstr ""
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ഫേംവെയര്‍ വാരിയബ്ള്സ് സെറ്റ് ചെയ്തു കൊണ്ടിരിക്കുന്നു"
@@ -78,6 +95,18 @@ msgstr ""
 "ബൂട്ട് ചെയ്യാനായി ശ്രമിക്കുകയും ചെയ്യും. നിങ്ങള്ക്ക് ഇതില്‍ നിന്നും പിന്തിരിയാന്‍ ഏതെങ്കിലും കീ "
 "അമര്ത്താം. നിങ്ങള്‍ NeTTrom കമാന്റ് സിസ്റ്റത്തിലെത്തും അവിടെ നിങ്ങള്ക്ക് താഴെ പറയുന്ന കമാന്റുകള്‍ "
 "പ്രവര്ത്തിപ്പിക്കേണ്ടതായി വരും:"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
