--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-03 21:31-0300\n"
 "Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
 "Language-Team:  Debia-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
@@ -43,6 +43,16 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
@@ -51,6 +61,13 @@ msgstr ""
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "Definindo variáveis de firmware para inicialização automática"
@@ -71,6 +88,18 @@ msgstr ""
 "iniciar automaticamente. Você pode abortar esse processo pressionando "
 "qualquer tecla. Ao fazê-lo, você será levado ao sistema de comandos NeTTrom, "
 "onde você precisa executar os seguintes comandos :"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
