--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -22,8 +22,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-14 00:17+0300\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
@@ -55,6 +55,16 @@ msgstr ""
 "reporni. La promptul de firmware iniţializaţi următoarele variabile de "
 "firmware pentru activarea pornirii automate:"
 
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
 # XXX: nu prea îmi place începutul
 #. Type: note
 #. Description
@@ -68,6 +78,13 @@ msgstr ""
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "Se pregătesc variabilele firmware pentru pornire automată"
@@ -88,6 +105,18 @@ msgstr ""
 "încerca să pornească automat. Puteţi abandona prin apăsarea unei taste. Veţi "
 "fi lăsaţi la sistemul de comenzi NeTTrom unde va trebui să executaţi "
 "următoarele comenzi:"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
