--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-10-04 04:34+0200\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team:  Slovak <sk-i18n@lists.linux.sk>\n"
@@ -44,6 +44,16 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
@@ -52,6 +62,13 @@ msgstr ""
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "Nastavenie premenných firmware pre automatické štartovanie"
@@ -71,6 +88,18 @@ msgstr ""
 "systém reštartuje a firmware sa pokúsi o automatické štartovanie, ktoré "
 "môžete prerušiť stlačením ľubovoľného klávesu. Následne na to sa ocitnete v "
 "príkazovom režime NeTTrom, kde musíte spustiť nasledovné príkazy: "
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
