--- a/debian/po/th.po
+++ b/debian/po/th.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
-"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-26 10:53+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-06 19:08+0100\n"
 "PO-Revision-Date: 2006-09-27 14:25+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <l10n@opentle.org>\n"
@@ -43,12 +43,29 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:9
+msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr "หรือมิฉะนั้น คุณก็ยังสามารถสั่งบูตเคอร์เนลเองโดยป้อนคำสั่งที่บรรทัดคำสั่งของเฟิร์มแวร์:"
 
 #. Type: note
 #. Description
+#: ../nobootloader.templates:9
+msgid " ${KERNEL_BOOT}"
+msgstr ""
+
+#. Type: note
+#. Description
+#. flag:translate!:3
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr "การตั้งค่าตัวแปรเฟิร์มแวร์สำหรับการบูตอัตโนมัติ"
@@ -67,6 +84,18 @@ msgstr ""
 "เพื่อให้เครื่องของคุณบูตเข้าลินุกซ์โดยอัตโนมัติ ในตอนท้ายของการติดตั้ง ระบบจะบูตเครื่องใหม่ "
 "และเฟิร์มแวร์จะพยายามบูตอัตโนมัติ คุณสามารถยกเลิกการบูตดังกล่าวได้โดยกดปุ่มใดๆ ก็ได้ "
 "แล้วคุณจะเข้าสู่ระบบคำสั่งของ NeTTrom ซึ่งคุณสามารถสั่งคำสั่งต่อไปนี้ได้:"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:31
+msgid ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
+msgstr ""
 
 #. Type: note
 #. Description
