--- a/debian/po/tl.po
+++ b/debian/po/tl.po
@@ -14,13 +14,14 @@
 # This file is maintained by Eric Pareja <xenos@upm.edu.ph>
 # Inaalagaan ang talaksang ito ni Eric Pareja <xenos@upm.edu.ph>
 #
+# ituloy angsulong mga kapatid http://www.upm.edu.ph/~xenos
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-06 19:08+0100\n"
-"PO-Revision-Date: 2006-09-28 00:01+0800\n"
+"PO-Revision-Date: 2006-11-24 03:00+0800\n"
 "Last-Translator: Eric Pareja <xenos@upm.edu.ph>\n"
 "Language-Team: Tagalog <debian-tl@banwa.upm.edu.ph>\n"
 "MIME-Version: 1.0\n"
@@ -57,6 +58,10 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
 
 #. Type: note
 #. Description
@@ -72,7 +77,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid " ${KERNEL_BOOT}"
-msgstr ""
+msgstr " ${KERNEL_BOOT}"
 
 #. Type: note
 #. Description
@@ -109,6 +114,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
