--- a/debian/po/bn.po
+++ b/debian/po/bn.po
@@ -10,7 +10,7 @@
 # Anubadok, the en2bn auto-translator by Golam Mortuza Hossain <golam@imsc.res.in>, 2005.
 # Baishampayan Ghose <b.ghose@gnu.org.in>, 2005-2006.
 # Quazi Ashfaq-ur Rahman <quazi.ashfaq@gmail.com>, 2005.
-# Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2005.
+# Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2005, 2006.
 # Progga <progga@BengaLinux.Org>, 2005, 2006.
 # Jamil Ahmed <jamil@bengalinux.org>, 2006.
 # Mahay Alam Khan (মাহে আলম খান) <makl10n@yahoo.com>, 2006.
@@ -20,8 +20,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-06 19:08+0100\n"
-"PO-Revision-Date: 2006-10-04 01:54+0600\n"
-"Last-Translator: Mahay Alam Khan (মাহে আলম) <makl10n@yahoo.com>\n"
+"PO-Revision-Date: 2006-11-21 00:34+0600\n"
+"Last-Translator: Jamil Ahmed <jamil@bengalinux.org>\n"
 "Language-Team: Bangla <core@BengaLinux.Org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -57,6 +57,10 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+"setenv boot-device ${OF_BOOT_DEVICE}\n"
+"setenv ${OF_BOOT_FILE}\n"
+"setenv auto-boot-timeout 5000\n"
+"setenv auto-boot boot-file? true"
 
 #. Type: note
 #. Description
@@ -71,7 +75,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid " ${KERNEL_BOOT}"
-msgstr ""
+msgstr "${KERNEL_BOOT}"
 
 #. Type: note
 #. Description
@@ -108,6 +112,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
