--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -66,7 +66,7 @@ msgstr "બીજી રીતે, તમે જાતે કર્નલને 
 #. Description
 #: ../nobootloader.templates:9
 msgid " ${KERNEL_BOOT}"
-msgstr ""
+msgstr " ${KERNEL_BOOT}"
 
 #. Type: note
 #. Description
